--- a/src/stylesheets/login.css
+++ b/src/stylesheets/login.css
@@ -6,7 +6,7 @@
   background: #fff;
   border-radius: 5px;
   width: 580px;
-  height: 540px;
+  min-height: 540px;
 }
 
 .login__title {
@@ -16,18 +16,58 @@
 }
 
 .login__form {
-  display: flex;
-  flex-direction: column;
+  margin-bottom: 45px;
+  position: relative;
+  width: 100%;
 }
 
 .login__input {
-  margin-bottom: 25px;
+  display: flex;
+  flex-direction: column;
+  position: relative;
 }
 
-.login__input:last-child {
-  margin-bottom: 0;
+.login__field {
+  margin-bottom: 25px;
+  border: 0;
+  border-bottom: 2px solid #E4E4E4;
+  outline: none;
+  padding: 7px 0;
+  background: transparent;
+}
+
+.login__field:focus {
+  border-color: #FDBF5A;
+}
+
+.login__label {
+  margin-bottom: 10px;
+  font-weight: 700;
 }
 
 .login__forgot-password {
-  margin-bottom: 45px;
+  color: #828282;
+  text-decoration: none;
+  position: absolute;
+  bottom: -5px;
+  right: 0;
+}
+
+.login__forgot-password:hover {
+  color: #FFA842;
+  transition: all 0.1s;
+}
+
+.login__new-user {
+  color: #828282;
+}
+
+.login__registration {
+  color: #FDBF5A;
+  text-decoration: none;
+}
+
+.login__registration:hover {
+  color: #FFA842;
+  transition: all 0.1s;
 }
