--- a/src/index.css
+++ b/src/index.css
@@ -1,79 +1,133 @@
-html,
-body,
-#root {
-  height: 100%;
-  width: 100%;
-}
+  html,
+  body,
+  #root {
+    height: 100%;
+    width: 100%;
+  }
 
-#index {
-  position: relative;
-}
+  #index {
+    position: relative;
+  }
 
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+  body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+      sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+  code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+      monospace;
+  }
 
-* {
-  box-sizing: border-box;
-}
+  * {
+    box-sizing: border-box;
+  }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0;
-  font-weight: bold;
-  font-family: 'Bebas Neue', 'Comic Sans MS', cursive;
-}
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    margin: 0;
+    font-weight: bold;
+    font-family: 'Bebas Neue', 'Comic Sans MS', cursive;
+  }
 
-a {
-  color: inherit;
-}
+  input::-webkit-input-placeholder {
+    opacity: 1;
+    transition: opacity 0.3s ease;
+  }
 
-p {
-  margin-top: 0;
-}
+  input::-moz-placeholder {
+    opacity: 1;
+    transition: opacity 0.3s ease;
+  }
 
-ul {
-  padding: 0;
-  margin: 0;
-}
+  input:-moz-placeholder {
+    opacity: 1;
+    transition: opacity 0.3s ease;
+  }
 
-ul li {
-  list-style: none;
-}
+  input:-ms-input-placeholder {
+    opacity: 1;
+    transition: opacity 0.3s ease;
+  }
 
-button {
-  background: transparent;
-  border: none;
-  cursor: pointer;
-}
+  input:focus::-webkit-input-placeholder {
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
 
-.wrapper {
-  overflow: auto;
-  width: 100%;
-  height: 100%;
-  position: relative;
-}
+  input:focus::-moz-placeholder {
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
 
-section {
-  height: 100%;
-  width: 100%;
-}
+  input:focus:-moz-placeholder {
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
 
-img {
-  display: block;
-  max-width: 100%;
-}
+  input:focus:-ms-input-placeholder {
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
+
+  a {
+    color: inherit;
+  }
+
+  p {
+    margin-top: 0;
+  }
+
+  ul {
+    padding: 0;
+    margin: 0;
+  }
+
+  ul li {
+    list-style: none;
+  }
+
+  button {
+    background: transparent;
+    border: none;
+    cursor: pointer;
+  }
+
+  .wrapper {
+    overflow: auto;
+    width: 100%;
+    height: 100%;
+    position: relative;
+  }
+
+  section {
+    height: 100%;
+    width: 100%;
+  }
+
+  img {
+    display: block;
+    max-width: 100%;
+  }
+
+  .map-wrapper {
+    position: relative;
+    height: 100%;
+    width: 100%;
+  }
+
+  .map {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+  }
