Оформил карту в секции профиля. Осталось добавить обновление в реальном времени полей пречека

--- a/src/stylesheets/profile.css
+++ b/src/stylesheets/profile.css
@@ -7,7 +7,7 @@
   justify-content: center;
 }
 
-.profile__content {
+.profile__wrapper {
   width: 888px;
   height: 588px;
   background: #fff;
@@ -24,6 +24,7 @@
 .profile__title {
   font-size: 36px;
   font-weight: 700;
+  margin-bottom: 10px;
 }
 
 .profile__description {
@@ -31,7 +32,7 @@
   color: #7B7B7B;
 }
 
-.profile__card {
+.profile__content {
   height: 233px;
   margin-bottom: 40px;
   display: flex;
@@ -51,10 +52,47 @@
   width: 45%;
 }
 
-.profile__card-content {
+.profile__precheck-content {
   height: 182px;
   border-radius: 10px;
   box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+  padding: 18px 16px 16px 28px;
+}
+
+.profile__precheck-up-side {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 28px;
+}
+
+.profile__precheck-logo {
+  height: 33px;
+  width: 33px;
+}
+
+.profile__precheck-date {
+  font-size: 12px;
+}
+
+.profile__precheck-card-number {
+  font-size: 21px;
+  margin-bottom: 35px;
+}
+
+.profile__precheck-bottom-side {
+  display: flex;
+  justify-content: space-between;
+}
+
+.profile__precheck-chip {
+  width: 30px;
+  height: 27px;
+}
+
+.profile__precheck-master-card-logo {
+  width: 48px;
+  height: 28px;
 }
 
 .profile__button {
