--- a/src/stylesheets/login.css
+++ b/src/stylesheets/login.css
@@ -19,6 +19,8 @@
   margin-bottom: 35px;
   position: relative;
   width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .login__forgot-password {
