--- a/src/stylesheets/input.css
+++ b/src/stylesheets/input.css
@@ -5,6 +5,7 @@
 }
 
 .input__field {
+  width: 100%;
   margin-bottom: 25px;
   border: 0;
   border-bottom: 2px solid #E4E4E4;
@@ -20,4 +21,10 @@
 .input__label {
   margin-bottom: 10px;
   font-weight: 700;
+}
+
+.input__label--font-color--grey {
+  color: #828282;
+  font-weight: 400;
+  font-size: 16px;
 }
